# pyproject.toml

[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "project_euler_solutions"
version = "1.0.0"
description = "Solutions to Project Euler problems"
readme = "README.md"
authors = [{ name = "Christopher Holland", email = "chris.henry.holland@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["Project Euler", "mathematics", "algorithm"]
dependencies = [
    "sortedcontainers>=2.4.0",
    "numpy>=1.26.0",
    "scipy>=1.11.3",
    "sympy>=1.11.1",
    "gmpy2>=2.2.0",
    "data_structures_and_algorithms @ git+https://github.com/chris-henry-holland/python-DataStructuresAndAlgorithms",
]
requires-python = ">=3.11"

[project.urls]
Repository = "https://github.com/chris-henry-holland/python-ProjectEulerSolutions.git"